--- a/load1.html
+++ b/load1.html
@@ -194,7 +194,7 @@
                             <td>${durations[i]}</td>
                             <td>${zoneTL[i]}</td>
                             <td>${distances2[i]} - ${distances[i]}</td>
-                            <td>${runType}</td>
+                            <td>${runType}[i]</td>
                         </tr>
                     `;
                 });
