--- a/load2.html
+++ b/load2.html
@@ -141,7 +141,7 @@
             let percentages = [0.55, 0.25, 0.2, 0.0]; // Default to General
             const durationConstants = [0.683, 1.633, 1.731, 4.384];
             const distanceMultipliers = [0.75, 0.85, 0.95, 1.05];
-            const runType = ['วอร์มอัพ / คูลดาวน์ / Easy run / LSD / 60 - 120 นาที', 'Low Tempo/ Marathon Pace / 45-60 นาที', '10K,21K Pace / Hard Tempo, 30-45 นาที', 'Interval 2-4 นาที สลับพัก'];
+            const runType = ['วิ่งสบายๆพูดคุยได้<br>วอร์มอัพ / คูลดาวน์ / Easy run / LSD / 60 - 120 นาที', 'Low Tempo/ Marathon Pace / 45-60 นาที', '10K,21K Pace / Hard Tempo, 30-45 นาที', 'Interval 2-4 นาที สลับพัก'];
             const durationConstants2 = [1.633, 2.452, 4.384, 5.219];
 
             
