--- a/load2.html
+++ b/load2.html
@@ -142,8 +142,8 @@
             const durationConstants = [0.683, 1.633, 1.731, 4.384];
             const distanceMultipliers = [0.75, 0.85, 0.95, 1.05];
             const runType = ['<span style="color: green;">วิ่งสบายๆ พูดคุยประโยคยาวๆได้</span><br>วอร์มอัพ / คูลดาวน์ / Easy run / LSD / 60 - 120 นาที'
-                             ,'<span style="color: blue;">วิ่งใช้เริ่มความพยายามบ้าง พูดคุยได้ประโยคสั้นๆ</span><br>Low Tempo/ Marathon Pace / 45-60 นาที'
-                             , '<span style="color: orange;">วิ่งใช้เริ่มความพยายามมาก ยังคุยได้แต่ไม่ค่อยอยากคุยแล้ว</span><br>10K,21K Pace / Hard Tempo /30-45 นาที'
+                             ,'<span style="color: blue;">เริ่มใช้ความพยายามบ้าง พูดคุยได้ประโยคสั้นๆ</span><br>Low Tempo/ Marathon Pace / 45-60 นาที'
+                             , '<span style="color: orange;">เริ่มใช้ความพยายามมาก ยังคุยได้แต่ไม่ค่อยอยากคุยแล้ว</span><br>10K,21K Pace / Hard Tempo /30-45 นาที'
                              , '<span style="color: red;">วิ่งใช้ความพยายามสุด อย่าชวนคุยนะ</span><br>Interval 2-4 นาที สลับพัก'];
             const durationConstants2 = [1.633, 2.452, 4.384, 5.219];
 
