--- a/load2.html
+++ b/load2.html
@@ -187,7 +187,7 @@
                 
 
                 let totalTL = 0, totalDuration = 0, totalDistance = 0, totalDistance2 = 0, totalTL2 = 0;
-                let tableHTML = '<table><tr><th>Zone</th><th>Est. Duration (min)</th><th>TL</th><th>Est. Distance (km)</th><th>ลักษณะการซ้อม</th></tr>';
+                let tableHTML = '<table><tr><th>Zone</th><th>ระยะเวลารวมทั้งสัปดาห์ (นาที)</th><th>TL</th><th>ระยะทางรวมทั้งสัปดาห์ (กม.)</th><th>ลักษณะการซ้อม</th></tr>';
 
                 zones.forEach((zone, i) => {
                     totalDuration += durations[i];
