--- a/load2.html
+++ b/load2.html
@@ -138,10 +138,10 @@
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const zones = ['Low Zone', 'Moderate Zone', 'Hard Zone', 'Very Hard Zone'];
-            let percentages = [0.55, 0.25, 0.2, 0.0]; // Default to General
+            let percentages = [0.75, 0.15, 0.10, 0.0]; // Default to General
             const durationConstants = [0.700, 1.500, 2.452, 4.384];
             const distanceMultipliers = [0.72, 0.83, 0.95, 1.05];
-            const runType = ['<span style="color: green;">วิ่งสบายๆ พูดคุยประโยคยาวๆได้</span><br>วอร์มอัพ / คูลดาวน์ / Easy run / LSD / 60 - 120 นาที'
+            const runType = ['<span style="color: green;">วิ่งสบายๆ พูดคุยประโยคยาวๆได้</span><br>วอร์มอัพ / คูลดาวน์ / Easy run / วิ่งยาว / 60 - 120 นาที'
                              ,'<span style="color: blue;">เริ่มใช้ความพยายามบ้าง พูดคุยได้ประโยคสั้นๆ</span><br>Low Tempo/ Marathon Pace / 45-60 นาที'
                              , '<span style="color: orange;">เริ่มใช้ความพยายามมาก ยังคุยได้แต่ไม่ค่อยอยากคุยแล้ว</span><br>10K,21K Pace / Hard Tempo /30-45 นาที'
                              , '<span style="color: red;">วิ่งใช้ความพยายามสุด อย่าชวนคุยนะ</span><br>Interval 2-4 นาที สลับพัก'];
