--- a/load4.html
+++ b/load4.html
@@ -57,69 +57,86 @@
   <button id="addRowBtn">Add Row</button>
 
   <script>
-    // ฟังก์ชันคำนวณค่าในแถว
+    /**
+     * ฟังก์ชันคำนวณค่าในแต่ละแถว
+     * ตามสูตร: TL = 0.0699 * exp(0.0407 * X) * Duration
+     *         X  = (LT_Pace_in_sec * 100) / paceInSec
+     */
     function recalcRow(tr) {
-      // อ่านค่า LT Pace
+      // 1) อ่านค่า LT Pace
       const ltPaceMin = parseInt(document.getElementById("ltPaceMin").value) || 0;
       const ltPaceSec = parseInt(document.getElementById("ltPaceSec").value) || 0;
       const ltPaceInSec = ltPaceMin * 60 + ltPaceSec;
 
-      // ถ้า LT Pace ยังไม่ถูกกรอก หรือเป็น 0 จะคำนวณอะไรไม่ได้
+      // ถ้า LT Pace ยังไม่ถูกกรอก หรือเป็น 0 ให้หยุดคำนวณ
       if (ltPaceInSec <= 0) return;
 
-      // อ่านค่าจากฟอร์มในแถวปัจจุบัน
-      const paceMinInput = tr.querySelector(".paceMin");
-      const paceSecInput = tr.querySelector(".paceSec");
-      const durationInput = tr.querySelector(".duration");
-      const tlInput      = tr.querySelector(".tl");
-      const distField    = tr.querySelector(".distance");
+      // 2) อ่านค่าจากฟอร์มในแถวปัจจุบัน
+      const paceMinInput   = tr.querySelector(".paceMin");
+      const paceSecInput   = tr.querySelector(".paceSec");
+      const durationInput  = tr.querySelector(".duration");
+      const tlInput        = tr.querySelector(".tl");
+      const distField      = tr.querySelector(".distance");
 
       let paceMin   = parseInt(paceMinInput.value)   || 0;
       let paceSec   = parseInt(paceSecInput.value)   || 0;
-      let duration  = parseInt(durationInput.value)  || 0;
-      let tl        = parseFloat(tlInput.value)      || 0;
+      let duration  = parseFloat(durationInput.value)  || 0;
+      let tl        = parseFloat(tlInput.value)        || 0;
 
-      // pace (นาที/กม.) ในหน่วยวินาทีทั้งหมด
+      // paceInSec = pace (นาที/กม.) ในหน่วยวินาที
       const paceInSec = paceMin * 60 + paceSec;
 
-      // หา Intensity จากสูตร (ขึ้นกับ Pace เทียบกับ LT Pace)
-      // Intensity = 0.0699 * exp(0.0407 * X)
-      // X = (paceInSec * 100) / ltPaceInSec
-      let intensity = 0;
-      if (paceInSec > 0) {
-        const X = (paceInSec * 100) / ltPaceInSec;
-        intensity = 0.0699 * Math.exp(0.0407 * X);
+      // ฟังก์ชันคำนวณ TL ตามสูตรใหม่
+      // TL = 0.0699 * exp(0.0407 * X) * Duration
+      // X  = (LT_Pace_in_sec * 100) / paceInSec
+      function computeTL(paceInSec, duration) {
+        if (paceInSec <= 0 || duration <= 0) return 0;
+        const X = (ltPaceInSec * 100) / paceInSec;
+        const intensity = 0.0699 * Math.exp(0.0407 * X);
+        return intensity * duration;
       }
 
-      // 1) ถ้ามี Pace & Duration แต่ยังไม่มี TL --> คำนวณ TL
+      // 3) ตรรกะการคำนวณ: ต้องกรอก 2 ใน 3 ค่า (Pace, Duration, TL) แล้วให้คำนวณอีกค่า
+      // 3.1 ถ้ามี Pace & Duration แต่ TL เป็น 0 -> คำนวณ TL ใหม่
       if (paceInSec > 0 && duration > 0 && tl === 0) {
-        tl = duration * intensity; 
-        tlInput.value = tl.toFixed(0); // ปัดเป็นจำนวนเต็ม
+        tl = computeTL(paceInSec, duration);
+        tlInput.value = tl.toFixed(0);
       }
-      // 2) ถ้ามี Pace & TL แต่ไม่มี Duration --> คำนวณ Duration
+      // 3.2 ถ้ามี Pace & TL แต่ Duration เป็น 0 -> คำนวณ Duration ใหม่
       else if (paceInSec > 0 && tl > 0 && duration === 0) {
+        // tl = intensity * duration
+        // intensity = 0.0699 * exp(0.0407 * X) = computeIntensity
+        // => duration = tl / intensity
+        const X = (ltPaceInSec * 100) / paceInSec;
+        const intensity = 0.0699 * Math.exp(0.0407 * X);
         if (intensity > 0) {
-          duration = tl / intensity; 
+          duration = tl / intensity;
           durationInput.value = duration.toFixed(0);
         }
       }
-      // 3) ถ้ามี Duration & TL แต่ Pace เป็น 0 --> คำนวณ Pace จาก TL = duration * intensity
+      // 3.3 ถ้ามี Duration & TL แต่ Pace เป็น 0 -> คำนวณ Pace ใหม่
       else if (duration > 0 && tl > 0 && paceInSec === 0) {
-        // intensity = tl / duration
-        const newIntensity = tl / duration;
-        // newIntensity = 0.0699 * exp(0.0407 * X) => X = ln(newIntensity / 0.0699) / 0.0407
-        const newX = Math.log(newIntensity / 0.0699) / 0.0407;
-        const newPaceSec = (newX * ltPaceInSec) / 100;
+        // tl = 0.0699 * exp(0.0407 * X) * duration
+        // => (tl / duration) = 0.0699 * exp(0.0407 * X)
+        // => exp(0.0407 * X) = (tl / duration) / 0.0699
+        // => 0.0407 * X = ln((tl / duration) / 0.0699)
+        // => X = ln((tl / duration) / 0.0699) / 0.0407
+        // แต่ X = (ltPaceInSec * 100) / paceInSec
+        // => paceInSec = (ltPaceInSec * 100) / X
+        const part = (tl / duration) / 0.0699;
+        if (part > 0) {
+          const newX = Math.log(part) / 0.0407;
+          const newPaceSec = (ltPaceInSec * 100) / newX;
+          // แปลงกลับเป็น Pace (นาที และวินาที)
+          let newPaceMin = Math.floor(newPaceSec / 60);
+          let newPaceSecOnly = Math.round(newPaceSec % 60);
 
-        let newPaceMin = Math.floor(newPaceSec / 60);
-        let newPaceSecOnly = Math.round(newPaceSec % 60);
-
-        paceMinInput.value = newPaceMin;
-        paceSecInput.value = newPaceSecOnly;
+          paceMinInput.value = newPaceMin;
+          paceSecInput.value = newPaceSecOnly;
+        }
       }
 
-      // สุดท้ายคำนวณ Distance (ถ้า paceInSec > 0)
-      // Distance (km) = Duration (mins) / Pace (mins/km)
+      // 4) คำนวณ Distance (km) = Duration (นาที) / Pace (นาที/กม.)
       let distance = 0;
       if (paceInSec > 0 && duration > 0) {
         let paceInMin = paceInSec / 60;  // pace ในนาที/กม.
@@ -128,7 +145,9 @@
       distField.textContent = distance.toFixed(2);
     }
 
-    // ฟังก์ชันผูก event ให้ input ทุกช่องในแถวนั้น
+    /**
+     * ฟังก์ชันผูก event ให้ input ทุกช่องในแถวนั้น
+     */
     function attachEventsToRow(tr) {
       const inputs = tr.querySelectorAll("input");
       inputs.forEach(input => {
@@ -142,7 +161,9 @@
       });
     }
 
-    // เพิ่มแถวใหม่
+    /**
+     * เพิ่มแถวใหม่
+     */
     function addRow() {
       const tbody = document.querySelector("#myTable tbody");
       const newRow = document.createElement("tr");
@@ -155,12 +176,10 @@
         <td><button class="removeBtn">Remove</button></td>
       `;
       tbody.appendChild(newRow);
-
-      // ผูก event ให้ input ในแถวใหม่
       attachEventsToRow(newRow);
     }
 
-    // ------------------ เมื่อหน้าโหลด ------------------ //
+    // เมื่อหน้าโหลด
     document.addEventListener("DOMContentLoaded", () => {
       // ผูก event ให้แถวแรกที่มีอยู่แล้ว
       const firstRow = document.querySelector("#myTable tbody tr");
@@ -169,8 +188,11 @@
       // ปุ่ม Add Row
       document.getElementById("addRowBtn").addEventListener("click", addRow);
 
-      // ถ้าปรับ LT Pace ก็ให้รีคำนวณทุกแถวใหม่หมด
-      const ltPaceInputs = [document.getElementById("ltPaceMin"), document.getElementById("ltPaceSec")];
+      // ถ้าปรับค่า LT Pace ให้รีคำนวณทุกแถวใหม่
+      const ltPaceInputs = [
+        document.getElementById("ltPaceMin"),
+        document.getElementById("ltPaceSec")
+      ];
       ltPaceInputs.forEach(ip => {
         ip.addEventListener("change", () => {
           const rows = document.querySelectorAll("#myTable tbody tr");
